--- a/my app/app/build.gradle
+++ b/my app/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
