--- a/my app/app/build.gradle
+++ b/my app/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
