--- a/my app/app/src/main/AndroidManifest.xml
+++ b/my app/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
 
         <activity android:name=".Faq"></activity>
         <activity android:name=".Forum" />
+        <activity android:name=".SearchPage"/>
         <activity android:name=".packages_2" />
         <activity android:name=".VisitReview" />
         <activity android:name=".ChatActivity" />
