--- a/my app/app/src/main/AndroidManifest.xml
+++ b/my app/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
+        <activity android:name=".ForumAnswer"/>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
