--- a/my app/app/build.gradle
+++ b/my app/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
@@ -44,7 +45,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:6.1.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
