--- a/my app/app/src/main/AndroidManifest.xml
+++ b/my app/app/src/main/AndroidManifest.xml
@@ -112,7 +112,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".StayActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".DisplayStay"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
